--- a/Task3-EDA/EDA_3rd-Task.ipynb
+++ b/Task3-EDA/EDA_3rd-Task.ipynb
@@ -115131,6 +115131,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### According to me, the strategy is quite simple. We find out those cities or states where the \"Lossmaker\" Sub-Categories have made Profits. Find out what's happening in those cities so that these Sub-Categories are naking profits out there. And then we make a strategy to follow the same for other cities too!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
